feat: hoàn thiện API liệt kê các chia sẻ của người gửi
